# nginx-proxy-manager-sdk-python

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  publish.yml
docs/: index.md
src/: certificates.ts  client.ts  index.ts  proxy-hosts.ts  types.ts  validation.ts
src/nginx_proxy_manager_sdk/: __init__.py  client.py  exceptions.py  models.py  resources.py  validation.py
tests/: test_client.py
